Fixed file list overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,25 @@
     }
 }
 
+/* Thin, modern scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(100, 100, 100, 0.5);
+    border-radius: 10px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(100, 100, 100, 0.8);
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+
 .custom-progress::-webkit-progress-value {
     background-color: #f0f4f8;
     border-top-left-radius: 9999px;
